Search ElasticSearch address in environment variable to work inside and outside containers

--- a/API/Dockerfile
+++ b/API/Dockerfile
@@ -6,4 +6,4 @@ RUN apt update && apt install python3-pip -y && pip install -r requirements.txt
 
 EXPOSE 8000
 
-CMD uvicorn api_elasticsearch:api --host 0.0.0.0
+CMD ELASTIC_URL="my_es_from_compose:9200" uvicorn api_elasticsearch:api --host 0.0.0.0
